--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
 	"json.schemas": [
 		{
 			"url": "https://raw.githubusercontent.com/ScoopInstaller/Scoop/master/schema.json",
-			"fileMatch": ["bucket/*.json"]
+			"fileMatch": ["bucket/**/*.json"]
 		}
 	],
 	"files.exclude": {
@@ -20,8 +20,5 @@
 		"**/CVS": true,
 		"**/.DS_Store": true,
 		"**/tmp": true
-	},
-	"[json]": {
-		"editor.formatOnSave": false
 	}
 }
