Disable json formatting and fix indentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 // Configure PSScriptAnalyzer settings
 {
+    "[json][jsonc]": {
+        "editor.defaultFormatter": null
+    },
     "[powershell]": {
         "editor.formatOnSave": true
     },
